[metadata]
description = django-ok-images allows to generate WebP images using django-versatileimagefield.
long_description = file: README.rst
author = Oleg Kleschunov
author_email = igorkleschunov@gmail.com
url = https://github.com/LowerDeez/ok-images
home-page = https://github.com/LowerDeez/ok-images
keywords = python, images, image-models, django, webp, django-versatileimagefield
license = MIT
classifiers =
    Development Status :: 4 - Beta
    Environment :: Web Environment
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Framework :: Django
    Framework :: Django :: 1.11
    Framework :: Django :: 2.0
    Framework :: Django :: 2.1
    Framework :: Django :: 2.2

[options]
packages = find:
include_package_data = True
zip_safe = False
install_requires =
    django>=1.11
    six
    mock

[isort]
known_first_party = images
default_section = THIRDPARTY
sections = FUTURE,STDLIB,THIRDPARTY,FIRSTPARTY,LOCALFOLDER
multi_line_output = 0
skip = migrations
